src/test/ui/associated-types/higher-ranked-projection.bad.nll.stderr
error[E0308]: mismatched types
  --> $DIR/higher-ranked-projection.rs:25:5
   |
LL |     foo(());
   |     ^^^^^^^ one type is more general than the other
   |
   = note: expected reference `&'a ()`
              found reference `&()`
note: the lifetime requirement is introduced here
  --> $DIR/higher-ranked-projection.rs:15:33
   |
LL |     where for<'a> &'a T: Mirror<Image=U>
   |                                 ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
